--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RegressionApp</string>
     <string name="action_settings">Settings</string>
+    <string name="start_calc">Начать вычисления</string>
+    <string name="show_calc">Отобразить результаты</string>
 </resources>
