--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="start_calc">Начать вычисления</string>
     <string name="show_calc">Отобразить результаты</string>
+    <string name="show_2">Отобразить</string>
 </resources>
