--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="start_calc">Начать вычисления</string>
     <string name="show_calc">Отобразить результаты</string>
     <string name="show_2">Отобразить</string>
+    <string name="test_col">Объем тестовой выборки:</string>
 </resources>
